fixed arrow up positioning on mobile

--- a/components/General/ScrollUp/ScrollUp.module.css
+++ b/components/General/ScrollUp/ScrollUp.module.css
@@ -1,6 +1,13 @@
 .main {
 	position: fixed;
-	top: 3rem;
-	right: 5rem;
+	top: 2rem;
+	right: 2rem;
 	z-index: 1;
+}
+
+@media (min-width: 800px) {
+	.main {
+		top: 3rem;
+		right: 5rem;
+	}
 }
